[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/kz_debugger/dialog/warningDialog.gd" type="Script" id=1]

[node name="Control" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 704.0
margin_top = 400.5
margin_right = 192.0
margin_bottom = 0.5
input_pass_on_modal_close_click = false
window_title = "WARNING"
script = ExtResource( 1 )

[node name="txt" type="RichTextLabel" parent="."]
margin_top = 73.0
margin_right = 512.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 10 )
bbcode_enabled = true
bbcode_text = "[center]do you want to skip this fgame just to do something else?[/center]"
text = "do you want to skip this fgame just to do something else?"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 174.5
margin_top = 107.0
margin_right = 337.5
margin_bottom = 127.0
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="ok" type="Button" parent="HBoxContainer"]
margin_right = 30.0
margin_bottom = 20.0
text = "Ok"

[node name="yes" type="Button" parent="HBoxContainer"]
margin_left = 34.0
margin_right = 67.0
margin_bottom = 20.0
text = "YES"

[node name="no" type="Button" parent="HBoxContainer"]
margin_left = 71.0
margin_right = 104.0
margin_bottom = 20.0
text = "NO"

[node name="cancel" type="Button" parent="HBoxContainer"]
margin_left = 108.0
margin_right = 162.0
margin_bottom = 20.0
text = "Cancel"

[connection signal="pressed" from="HBoxContainer/ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="HBoxContainer/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="HBoxContainer/no" to="." method="_on_no_pressed"]
[connection signal="pressed" from="HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
